# gello_software

./: .gitignore
experiments/: run_env.py
gello_ros/: CMakeLists.txt  README.md  kill_nodes.sh  package.xml  requirements.txt  setup.py
gello_ros/config/: cobotta.yaml  common.yaml  fr3e.yaml  ur5e.yaml
gello_ros/launch/: gello.launch  gello_cobotta.launch  realsense.launch  test_camera.launch  test_gello_publisher.launch  usb_cam.launch
gello_ros/scripts/: dynamixel.ipynb  evaluate.py  gello_get_offset.py  hdf5_image_check.ipynb  jacobian.py  launch_nodes.py  policy_config.py  read_hdf5.ipynb  run_GUI.py  run_agent_node.py  run_camera_nodes.py  run_env.py  run_gello.py  run_realsense_nodes.py  run_realsense_ros_nodes.py  run_robot_node.py  train.py  train_config.py
gello_ros/src/gello_ros/: env.py
gello_ros/src/gello_ros/agents/: act_agent.py  gello_agent.py  gello_publisher.py  quest_agent.py  spacemouse_agent.py
gello_ros/src/gello_ros/cameras/: camera.py  realsense_camera.py  realsense_ros.py
gello_ros/src/gello_ros/data_utils/: demo_to_gdict.py  format_obs.py  keyboard_interface.py  save_episode.py
gello_ros/src/gello_ros/dynamixel/: driver.py
gello_ros/src/gello_ros/policy/: policy.py  utils.py
gello_ros/src/gello_ros/robots/: cobotta_gripper.py  dynamixel.py  panda.py  ros_cartesian_compliance_control_robot.py  ros_cartesian_motion_control_robot.py  ros_joint_position_control_robot.py  ros_joint_trajectory_control_robot.py  ros_robot.py  sim_robot.py  ur.py  xarm_robot.py
gello_ros/src/gello_ros/zmq_core/: camera_node.py  robot_node.py
(+20 files in other folders)
