<?xml version="1.0"?>
<package format="2">
  <name>gello_ros</name>
  <version>0.0.0</version>
  <description>The gello_ros package</description>

  <maintainer email="yusaku_nakajima@ap.eng.osaka-u.ac.jp">Yusaku Nakajima</maintainer>

  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>libuvc-camera</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>libuvc-camera</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>libuvc-camera</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>